# workbooks

./: .Rprofile  .gitignore  .gitmodules  .lintr  BINDER_REPRODUCIBILITY_ANALYSIS.md  CHANGELOG.md  Cover_vol_2_lulu.html  Estimating the population mean and proportion workshop.Rmd  Estimation with auxiliary variables and stratification workshop.Rmd  Goodness of fit workshop.Rmd  Hypothesis testing workshop.Rmd  LICENSE  Probability distributions workshop.Rmd  README.md  Regression analysis workshop.Rmd  VOLUME_SPLIT_SUMMARY.md  WHATS_NEW.md  Workshop 1 (Python).ipynb  Workshop 2 (Python).ipynb  Workshop 2 (R) Notebook.Rmd  Workshop 3 (Python).ipynb  Workshop 3 (R) Notebook.Rmd  Workshop 4 (Python).ipynb  Workshop 4 (R) Notebook.Rmd  Workshop 5 (Python).ipynb  Workshop 5 (R) Notebook.Rmd  Workshop 6 (Python).ipynb  Workshop 7 (R) Notebook.Rmd  ada_LuHoo.code-workspace  ada_main.aux  ada_main.fdb_latexmk  ada_main.fls  ada_main.idx  ada_main.ilg  ada_main.ind  ada_main.ist  ada_main.lof  ada_main.lot  ada_main.nlg  ada_main.nlo  (+44 more)
.binder/: apt.txt  install.R  postBuild  requirements.txt  runtime.txt
.github/: PULL_REQUEST_TEMPLATE.md
R/: notebook-utils.R
ada_fsaudit_bridge/: __init__.py  api.py  conversion.py  errors.py  models.py  native_stats.py  session.py
docs/: architecture_decision_record.md
metadata/: workshop-registry.R
notebooks/: README.md
scripts/: compute-h4-sampling-distributions-cache.R  export-auxiliary-variables-and-stratification-workshop.R  export-exercise-1-1.R  export-goodness-of-fit-workshop.R  export-hypothesis-testing-workshop.R  (+26 more)
(+86 files in other folders)
